changed default spawn to airport

--- a/_assets/json/config.json
+++ b/_assets/json/config.json
@@ -1,6 +1,6 @@
 {
-    "defaultSpawn": {
-        "pos": "195.10682678222656, -933.8190307617188, 29.686786651611328",
-        "rot": "150"
+    "airport": {
+        "pos": "-1015.1852416992188, -2752.20263671875, -0.19963717460632324",
+        "rot": "133.74021911621094"
     }
 }
