--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "pm2 start ragemp-server --name rage_server && cd ./vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
     "restart": "pm2 stop rage_server && pm2 stop rage_vue && pm2 start ragemp-server --name rage_server && cd ./vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
     "kill": "pm2 stop rage_server && pm2 stop rage_vue && pm2 delete rage_server && pm2 delete rage_vue",
-    "pull": "git pull && \"npm run restart\""
+    "pull": "git pull && npm run restart"
   },
   "repository": {
     "type": "git",
