--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "pm2 start ragemp-server --name rage_server && cd ./vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
-    "restart": "pm2 stop rage_server && pm2 stop rage_vue && pm2 start ragemp-server --name rage_server && cd ./vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
+    "restart": "pm2 stop rage_server && pm2 stop rage_vue && pm2 delete rage_vue  && pm2 start ragemp-server --name rage_server && cd ./vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
     "kill": "pm2 stop rage_server && pm2 stop rage_vue && pm2 delete rage_server && pm2 delete rage_vue",
     "pull": "git pull && npm run kill && npm run start"
   },
@@ -24,7 +24,8 @@
     "bcryptjs": "^2.4.3",
     "better-console": "^1.0.1",
     "mysql": "^2.18.1",
-    "validator": "^13.7.0"
+    "sloc": "^0.2.1",
+    "validator": "^13.7.0",
+    "vue-router": "^4.0.14"
   }
 }
-
