--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Another PhenixGames Server",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start ragemp-server --name rage_server && cd ./vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
-    "restart": "pm2 stop rage_server && pm2 stop rage_vue && pm2 delete rage_vue  && pm2 start ragemp-server --name rage_server && cd ./vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
+    "start": "pm2 start ragemp-server --name rage_server && cd ./pg_vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
+    "restart": "pm2 stop rage_server && pm2 stop rage_vue && pm2 delete rage_vue  && pm2 start ragemp-server --name rage_server && cd ./pg_vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
     "kill": "pm2 stop rage_server && pm2 stop rage_vue && pm2 delete rage_server && pm2 delete rage_vue",
     "pull": "git pull && npm run kill && npm run start"
   },
