- added debug config - worked on inventory

--- a/pg_vue_server/package.json
+++ b/pg_vue_server/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "vuedraggable": "^2.24.3"
+    "vue-drag-n-drop": "^1.2.2",
+    "vue-draggable-next": "^2.1.1",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
