--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "phenixgames-v3",
   "version": "0.1.0",
   "description": "Another PhenixGames Server",
-  "main": "index.js",
   "scripts": {
     "start": "pm2 start ragemp-server --name rage_server && cd ./pg_vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
     "restart": "pm2 stop rage_server && pm2 stop rage_vue && pm2 delete rage_vue  && pm2 start ragemp-server --name rage_server && cd ./pg_vue_server && pm2 start \"npm run serve\" --name rage_vue && pm2 monit",
@@ -18,6 +17,9 @@
   "bugs": {
     "url": "https://github.com/PhenixGames/phenixgames-v3/issues"
   },
+  "moduleDirectories": [
+    "node_modules"
+  ],
   "homepage": "https://github.com/PhenixGames/phenixgames-v3#readme",
   "dependencies": {
     "axios": "^0.26.0",
