Added: backup user

--- a/packages/_db/db_config.example.json
+++ b/packages/_db/db_config.example.json
@@ -3,5 +3,9 @@
     "user": "",
     "password": "",
     "database": "",
-    "backup_repo": ""
+    "backup_repo": "",
+
+    
+    "backup_user": "",
+    "backup_password": ""
 }
