--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "better-console": "^1.0.1",
+    "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "simple-node-logger": "^21.8.12",
