--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "better-console": "^1.0.1",
     "dotenv": "^16.0.3",
+    "extends-classes": "^1.0.5",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "simple-node-logger": "^21.8.12",
