--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "extends-classes": "^1.0.5",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "prettier": "^2.7.1",
     "simple-node-logger": "^21.8.12",
     "sloc": "^0.2.1",
     "validator": "^13.7.0",
