--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -21,6 +21,6 @@ jobs:
               uses: creyD/prettier_action@v4.2
               with:
                   # This part is also where you can pass other options, for example:
-                  prettier_options: '--write **/*.{js,vue,css} --single-quote --bracket-same-line=true'
+                  prettier_options: '--check . --single-quote --bracket-same-line=true'
                   dry: true
                   only_changed: True
