Model Improvements & added associations & updated accountapi

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ ragemp-server
 _assets/json/debug/debug.json
 _logs/debug_log/*
 _logs/error_log/*
+_logs/database_log/*
 _assets/functions/DatabaseBackup/last_backup.json
 .env
 ._*
