--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "Another PhenixGames Server",
     "private": true,
     "scripts": {
-        "start": "docker compose up -d",
-        "stop": "docker compose down",
+        "start": "pm2 start docker compose up -d --name phenixgames-v3",
+        "stop": "docker compose down && pm2 delete phenixgames-v3",
         "rage": "docker compose exec rage bash",
         "mysql": "docker compose exec mysql bash",
         "format": "prettier --write . --bracket-same-line=true",
