--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,32 +15,31 @@ services:
             - '22005:22005/udp'
             - 22006:22006
         restart: unless-stopped
-        tty: true
-        stdin_open: true
+        # tty: true
+        # stdin_open: true
 
-    vue:
-        build:
-            context: ./phenixgames-v3-vue
-            dockerfile: .docker/Dockerfile
-        volumes:
-            - .:/vue
-        working_dir: /vue
-        ports:
-            - 3000:3000
-        depends_on:
-            - rage
-        stdin_open: true
+    # vue:
+    #     build:
+    #         context: ./phenixgames-v3-vue
+    #         dockerfile: .docker/Dockerfile
+    #     volumes:
+    #         - .:/vue
+    #     working_dir: /vue
+    #     ports:
+    #         - 3000:3000
+    #     depends_on:
+    #         - rage
+    #     stdin_open: true
 
-    mysql:
-        build:
-            context: ../../.
-            dockerfile: .docker/mysql/Dockerfile
-        container_name: mysql
-        volumes:
-            - db_data:/var/lib/mysql
-        ports:
-            - 3306:3306
-        restart: unless-stopped
-        depends_on:
-            - rage
-        stdin_open: true
+    # mysql:
+    #     build:
+    #         dockerfile: .docker/mysql/Dockerfile
+    #     container_name: mysql
+    #     volumes:
+    #         - db_data:/var/lib/mysql
+    #     ports:
+    #         - 3306:3306
+    #     restart: unless-stopped
+    #     depends_on:
+    #         - rage
+    #     stdin_open: true
