--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -25,27 +25,29 @@ jobs:
                   dry: true
                   only_changed: True
 
-            - name: Send comment on failure
-              runs-on: ubuntu-latest
-              permissions:
-                pull-requests: write
-              steps:
-                - uses: mshick/add-pr-comment@v2
-                    with:
-                        if: ${{ failure() }}
-                        message: |
-                            Prettier found some errors. Please run `npm run prettier` and commit the changes.
-
-            name: Comment a pull_request
+            name: Comment on failed prettier
             runs-on: ubuntu-latest
             if: ${{ failure() }}
             steps:
                 - name: Checkout
                 uses: actions/checkout@v2
 
-                - name: Comment a pull_request
+                - name: Failed Comment
                 uses: mb2dev/github-action-comment-pull-request@1.0.0
                 with:
                     message: "Prettier found some errors. Please run `npm run format` and commit the changes."
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            name: Comment on success prettier
+            runs-on: ubuntu-latest
+            if: ${{ success() }}
+            steps:
+                - name: Checkout
+                uses: actions/checkout@v2
+
+                - name: Success Comment
+                uses: mb2dev/github-action-comment-pull-request@1.0.0
+                with:
+                    message: "Prettier found no errors. Good job!"
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
