--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -28,26 +28,26 @@ jobs:
             - name: Comment on failed prettier
               uses: actions/github-script@v2
               if: ${{ failure() }}
-              steps:
-                - name: Checkout
-                  uses: actions/checkout@v2
-
-                - name: Failed Comment
-                  uses: mb2dev/github-action-comment-pull-request@1.0.0
-                  with:
-                    message: "Prettier found some errors. Please run `npm run format` and commit the changes."
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                github-token: ${{ secrets.GITHUB_TOKEN }}
+                script: |
+                github.issues.createComment({
+                    issue_number: ${{ github.event.number }},
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    body: ':warning: Prettier failed. Please run `npm run prettier` and commit the changes.'
+                })
 
             - name: Comment on success prettier
               uses: actions/github-script@v2
               if: ${{ success() }}
-              steps:
-                - name: Checkout
-                  uses: actions/checkout@v2
-
-                - name: Success Comment
-                  uses: mb2dev/github-action-comment-pull-request@1.0.0
-                  with:
-                    message: "Prettier found no errors. Good job!"
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                github-token: ${{ secrets.GITHUB_TOKEN }}
+                script: |
+                github.issues.createComment({
+                    issue_number: ${{ github.event.number }},
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    body: 'Prettier found no errors. :100:'
+                })
 
