--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,40 +6,56 @@ volumes:
 
 services:
     rage:
+        depends_on:
+            mysql:
+                condition: service_healthy
         build:
             context: .
-            dockerfile: .docker/rage/Dockerfile
+            dockerfile: ./Dockerfile.rage
         volumes:
             - /opt/ragemp_server:/server
         ports:
             - '22005:22005/udp'
             - 22006:22006
         restart: unless-stopped
-        # tty: true
-        # stdin_open: true
+        env_file:
+            - .env
+        tty: true
+        stdin_open: true
+        links:
+            - mysql:mysql
 
-    # vue:
-    #     build:
-    #         context: ./phenixgames-v3-vue
-    #         dockerfile: .docker/Dockerfile
-    #     volumes:
-    #         - .:/vue
-    #     working_dir: /vue
-    #     ports:
-    #         - 3000:3000
-    #     depends_on:
-    #         - rage
-    #     stdin_open: true
+    vue:
+        build:
+            context: ./phenixgames-v3-vue
+            dockerfile: .docker/Dockerfile
+        volumes:
+            - .:/vue
+        working_dir: /vue
+        ports:
+            - 3000:3000
+        depends_on:
+            - rage
+        stdin_open: true
 
-    # mysql:
-    #     build:
-    #         dockerfile: .docker/mysql/Dockerfile
-    #     container_name: mysql
-    #     volumes:
-    #         - db_data:/var/lib/mysql
-    #     ports:
-    #         - 3306:3306
-    #     restart: unless-stopped
-    #     depends_on:
-    #         - rage
-    #     stdin_open: true
+    mysql:
+        container_name: mysql
+        image: mysql:5.7
+        command: --default-authentication-plugin=mysql_native_password
+        environment:
+            MYSQL_ROOT_PASSWORD: "root"
+            MYSQL_DATABASE: "phenixgames_v3"
+            MYSQL_USER: "root"
+            MYSQL_PASSWORD: "root"
+        volumes:
+            - db_data:/var/lib/mysql
+        ports:
+            - "3307:3306"
+        restart: unless-stopped
+        depends_on:
+            - rage
+        stdin_open: true
+        healthcheck:
+            test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+            timeout: 5s
+            retries: 10
