Worked on Docker

--- a/Dockerfile.rage
+++ b/Dockerfile.rage
@@ -22,4 +22,9 @@ ENV NODE_ENV=development
 RUN ls -la
 RUN npm install
 RUN chmod +x ragemp-server
-RUN ./ragemp-server
+
+RUN npm install -g pm2
+RUN pm2 list
+RUN pm2 start ragemp-server --name "rage-server"
+
+CMD ["pm2", "logs"]
