--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ networks:
             name: rage_network
 
 services:
-
     mysql:
         container_name: mysql
         hostname: mysql
@@ -29,7 +28,7 @@ services:
         restart: unless-stopped
         stdin_open: true
         healthcheck:
-            test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+            test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
             timeout: 5s
             retries: 10
 
@@ -64,4 +63,3 @@ services:
         depends_on:
             - rage
         stdin_open: true
-
