Added production override

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ _assets/functions/DatabaseBackup/last_backup.json
 .vs_code/
 phenixgames-v3-vue
 Dockerfile.overwrite
+docker-compose.override.yml
