--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,17 @@
-node_modules
+node_modules/
 phenixgames-backup
-env.example
-./docker
-docker-compose.yml
-linux_x64.tar.gz
+*.min.js
+jquery.js
+._*
+LICENSE
+dotnet
+maps
+bin
+.github
+.git
 core
-.git/
-.github/
+_backup
+_logs
+
+Dockerfile.*
 docker-compose.override.yml
