--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -3,6 +3,8 @@ name: Code Check
 on:
     pull_request:
         branches: [dev, main]
+    push:
+        branches: [fix/*, feature/*, dev]
 
 jobs:
     prettier:
