--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -29,8 +29,7 @@ jobs:
 
             - name: Comment on failed prettier
               uses: actions/github-script@v6
-              if: ${{ failure() }}
-              if: ${{ github.event_name == 'pull_request' }}
+              if: ${{ failure() && github.event_name == 'pull_request'}}
               with:
                 script: |
                     github.rest.issues.createComment({
@@ -42,8 +41,7 @@ jobs:
 
             - name: Comment on success prettier
               uses: actions/github-script@v6
-              if: ${{ success() }}
-              if: ${{ github.event_name == 'pull_request' }}
+              if: ${{ success() && github.event_name == 'pull_request' }}
               with:
                 script: |
                     github.rest.issues.createComment({
