--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,19 @@ volumes:
     db_data:
 
 networks:
-    default:
-        external:
-            name: rage_network
+    static-network:
+        ipam:
+            config:
+                - subnet: 172.20.0.0/16
 
 services:
     mysql:
-        container_name: mysql
         hostname: mysql
         image: mysql:5.7
         command: --default-authentication-plugin=mysql_native_password
         environment:
             MYSQL_ROOT_PASSWORD: root
+            MYSQL_ROOT_HOST: mysql
             MYSQL_DATABASE: phenixgames_v3
             MYSQL_USER: root
             MYSQL_PASSWORD: root
@@ -23,6 +24,8 @@ services:
             MYSQL_HOSTNAME: mysql
         volumes:
             - db_data:/var/lib/mysql
+        env_file:
+            - .env
         ports:
             - 3307:3306
         restart: unless-stopped
@@ -31,30 +34,31 @@ services:
             test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
             timeout: 5s
             retries: 10
-
+        networks:
+            static-network:
+                ipv4_address: 172.20.128.3
     rage:
-        container_name: rage
-        hostname: rage
         depends_on:
             - mysql
         build:
             context: .
             dockerfile: ./Dockerfile.rage
         ports:
-            - '22005:22005/udp'
+            - 22005:22005/udp
             - 22006:22006
         restart: unless-stopped
         env_file:
             - .env
-        links:
-            - mysql:mysql
         tty: true
         stdin_open: true
+        networks:
+            static-network:
+                ipv4_address: 172.20.128.2
 
     vue:
         build:
             context: ./phenixgames-v3-vue
-            dockerfile: .docker/Dockerfile
+            dockerfile: ./Dockerfile
         volumes:
             - .:/vue
         working_dir: /vue
