--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,33 @@
 version: '3.9'
 
 volumes:
-    db_data:
+    mysql:
 
 services:
     mysql:
-        hostname: mysql
         image: mysql:5.7
-        command: --default-authentication-plugin=mysql_native_password
         environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_ROOT_HOST: mysql
-            MYSQL_DATABASE: phenixgames_v3
-            MYSQL_USER: root
-            MYSQL_PASSWORD: root
-            MYSQL_PORT: 3306
-            MYSQL_HOSTNAME: mysql
+            - MYSQL_ROOT_PASSWORD=root
+            - MYSQL_DATABASE=phenixgames-v3
+            - MYSQL_USER=phenixgames
+            - MYSQL_PASSWORD=root
+            - MYSQL_PORT=3306
         volumes:
-            - db_data:/var/lib/mysql
+            - mysql:/var/lib/mysql
         env_file:
             - .env
         ports:
-            - 3307:3306
+            - '3307:3306'
         restart: unless-stopped
         stdin_open: true
+        command:
+            ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
         healthcheck:
             test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
             timeout: 5s
             retries: 10
     rage:
-        depends_on:
+        links:
             - mysql
         build:
             context: .
@@ -43,15 +41,15 @@ services:
         tty: true
         stdin_open: true
 
-    vue:
-        build:
-            context: ./phenixgames-v3-vue
-            dockerfile: ./.docker/Dockerfile
-        volumes:
-            - .:/vue
-        working_dir: /vue
-        ports:
-            - 3000:3000
-        depends_on:
-            - rage
-        stdin_open: true
+    # vue:
+    #     build:
+    #         context: ./phenixgames-v3-vue
+    #         dockerfile: ./.docker/Dockerfile
+    #     volumes:
+    #         - .:/vue
+    #     working_dir: /vue
+    #     ports:
+    #         - 3000:3000
+    #     links:
+    #         - rage
+    #     stdin_open: true
