--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Another PhenixGames Server",
     "private": true,
     "scripts": {
-        "start": "docker compose up -d && docker ps",
+        "dockerStart": "./ragemp-server",
+        "start": "docker compose up -d --build && docker ps",
         "stop": "docker compose down",
         "restart": "npm run stop && npm run start",
         "format": "prettier --write . --bracket-same-line=true",
@@ -31,6 +32,7 @@
         "moment": "^2.29.4",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3",
+        "nodemon": "^2.0.20",
         "prettier": "^2.8.1",
         "sequelize": "^6.27.0",
         "simple-node-logger": "^21.8.12",
