--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "private": true,
     "scripts": {
         "dockerStart": "./ragemp-server",
-        "start": "docker compose up -d --build && docker ps",
+        "start": "docker compose up -d --build && docker logs -f rage",
         "stop": "docker compose down",
-        "restart": "npm run stop && npm run start",
+        "restart": "npm run stop && npm run rm_image && npm run start",
+        "rm_image": "docker image rm -f phenixgames-v3_vue && docker image rm -f phenixgames-v3_rage",
         "format": "prettier --write . --bracket-same-line=true",
         "check": "prettier --check . --bracket-same-line=true"
     },
