--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "npm run rm_image && docker compose up -d --build && docker logs -f rage",
         "stop": "docker compose down",
         "restart": "npm run stop && npm run rm_image && npm run start",
-        "rm_image": "docker image rm -f phenixgames-v3_vue && docker image rm -f phenixgames-v3_rage",
+        "rm_image": "docker image rm -f phenixgames-v3_vue && docker image rm -f phenixgames-v3_rage && && docker image rm -f phenixgames-v3-rage && docker image rm -f phenixgames-v3-vue",
         "format": "prettier --write . --bracket-same-line=true",
         "check": "prettier --check . --bracket-same-line=true"
     },
