--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -16,4 +16,4 @@ jobs:
             - uses: actions/add-to-project@v0.4.0
               with:
                   project-url: https://github.com/orgs/PhenixGames/projects/3/
-                  github-token: ${{ secrets.ADD_PROJECT_MILESTONE }}
+                  github-token: ${{ secrets.ADD_PROJECT }}
