--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "stop": "docker compose down",
         "restart": "npm run stop && npm run rm_image && npm run start",
         "rm_image": "docker image rm -f phenixgames-v3_vue && docker image rm -f phenixgames-v3_rage && docker image rm -f phenixgames-v3-rage && docker image rm -f phenixgames-v3-vue",
-        "format": "prettier --write . --bracket-same-line=true",
-        "check": "prettier --check . --bracket-same-line=true"
+        "format": "docker run --rm -v $(pwd):/app -w /app node:18.8 sh -c \"npm install -g prettier && prettier --write .\"",
+        "check": "docker run --rm -v $(pwd):/app -w /app node:18.8 sh -c \"npm install -g prettier && prettier --check .\""
     },
     "repository": {
         "type": "git",
